--- a/you_are_my_sunshine_my_only_sunshine.html/LEBRON!!!!!!!!!!!!!.html
+++ b/you_are_my_sunshine_my_only_sunshine.html/LEBRON!!!!!!!!!!!!!.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Flappy Bird – Suns Edition</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div id="navbar">
-<h1>CHESS.com</h1>
+  <header>
+    <nav>
+      <a href="LEBRON!!!!!!!!!!!!!.html">Sun Wars</a>
+      <a href="Lakers.html">Sun Wars video</a>
+    </nav>
+  </header>
 
-<ul>
-<li><a href="PLAY_A_BOT.html">PLAY_A_BOT</a></li>
-<li><a href="PLAY_NOW.html">PLAY_NOW</a></li>
-<!-- I LOFF CHESS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-</ul>
+  <!-- Start screen overlay -->
+  <div id="startScreen">
+    <button id="startBtn">Start</button>
+  </div>
 
+  <!-- Game canvas -->
+  <canvas id="gameCanvas" width="480" height="640"></canvas>
 
+  <!-- Screen‑reader score (also on canvas) -->
+  <div id="scoreBoard" aria-live="polite">Score 0</div>
 
-
-
-
-</div>
-
-<h1>YOU CAN BE HAPPY.</h1>
-<p>You can play against bots or real people!</p>
-<img src="240_F_1332721468_tHrCBPGHMvdndLarhDSO4ENZ1GSUGSl9.jpg" width="1975" height="1050" class = "centered-image">
-
+  <script src="script.js"></script>
 </body>
-
-
-
 </html>
